--- a/apps/gallery/index.html
+++ b/apps/gallery/index.html
@@ -2,14 +2,14 @@
 layout: default
 permalink: /gallery/
 redirect_from:
-  - /kr/gallery/
-  - /kr/gallery/index.html
+- /kr/gallery/
+- /kr/gallery/index.html
 language: kr
 title: 갤러리 - P5X 루페르넷
 description: P5X 갤러리. 썸네일을 클릭해 원본 이미지를 크게 확인하세요.
 alternate_urls:
-  en: /apps/gallery/?lang=en
-  jp: /apps/gallery/?lang=jp
+en: /apps/gallery/?lang=en
+jp: /apps/gallery/?lang=jp
 custom_css: []
 custom_js: []
 custom_data: ["characters/characters.js"]
@@ -27,12 +27,12 @@ custom_data: ["characters/characters.js"]
 <div class="main-wrapper">
   <div class="gallery-header">
     <div class="navigation-path">
-      <script>document.write(`<a href="${BASE_URL}/?v=${APP_VERSION}" id="nav-home">홈</a>`);</script>
+      <script>document.write(`<a href="${BASE_URL}/?v=${APP_VERSION}" id="nav-home" data-i18n="navHome">홈</a>`);</script>
       <span class="separator">/</span>
-      <span class="current-page" id="nav-current">갤러리</span>
+      <span class="current-page" id="nav-current" data-i18n="navCurrent">갤러리</span>
     </div>
     <div class="header-container">
-      <h1 id="gallery-title">갤러리</h1>
+      <h1 id="gallery-title" data-i18n="pageTitle">갤러리</h1>
     </div>
     <!-- 
     <p id="gallery-desc" class="korean-content">썸네일을 클릭하면 원본 이미지를 모달로 확인할 수 있습니다.</p>
@@ -43,53 +43,69 @@ custom_data: ["characters/characters.js"]
 
   <div class="gallery-toolbar">
     <div class="filters">
-      <input id="search-input" style="display:none;" type="text" placeholder="검색..." aria-label="Search" />
+      <input id="search-input" style="display:none;" type="text" placeholder="검색..." aria-label="Search"
+        data-i18n-placeholder="searchPlaceholder" />
       <select id="category-select" aria-label="Category">
-        <option value="">All</option>
+        <option value="" data-i18n="filterAll">전체</option>
       </select>
       <select id="tag-select" aria-label="Tag">
-        <option value="">All Tags</option>
+        <option value="" data-i18n="filterAllTags">모든 태그</option>
       </select>
     </div>
     <div class="sort" style="display:none;">
       <select id="sort-select" aria-label="Sort">
-        <option value="order_desc">Order ↓</option>
-        <option value="order_asc">Order ↑</option>
-        <option value="name_asc">Name A→Z</option>
-        <option value="name_desc">Name Z→A</option>
+        <option value="order_desc" data-i18n="sortOrderDesc">순서 ↓</option>
+        <option value="order_asc" data-i18n="sortOrderAsc">순서 ↑</option>
+        <option value="name_asc" data-i18n="sortNameAsc">이름 A→Z</option>
+        <option value="name_desc" data-i18n="sortNameDesc">이름 Z→A</option>
       </select>
     </div>
   </div>
 
   <div id="gallery-grid" class="gallery-grid" aria-live="polite"></div>
-  <div id="gallery-loader"><div class="gallery-spinner"></div></div>
+  <div id="gallery-loader">
+    <div class="gallery-spinner"></div>
+  </div>
 
 </div>
 
-  <!-- 이미지 모달 -->
-  <div id="image-modal" class="gallery-modal" aria-hidden="true" role="dialog" aria-label="image viewer">
-    <button class="modal-close" id="modal-close" aria-label="close">×</button>
-    <button class="modal-nav modal-prev" id="modal-prev" aria-label="previous" disabled>
-      <svg viewBox="0 0 24 24" width="28" height="28" aria-hidden="true"><path fill="currentColor" d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"/></svg>
-    </button>
-    <button class="modal-nav modal-next" id="modal-next" aria-label="next" disabled>
-      <svg viewBox="0 0 24 24" width="28" height="28" aria-hidden="true"><path fill="currentColor" d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6z"/></svg>
-    </button>
-    <img id="modal-image" alt="" />
-    <div class="modal-caption" id="modal-caption"></div>
-  </div>
+<!-- 이미지 모달 -->
+<div id="image-modal" class="gallery-modal" aria-hidden="true" role="dialog" aria-label="image viewer">
+  <button class="modal-close" id="modal-close" aria-label="close" data-i18n-aria="modalClose">×</button>
+  <button class="modal-nav modal-prev" id="modal-prev" aria-label="previous" data-i18n-aria="modalPrevious" disabled>
+    <svg viewBox="0 0 24 24" width="28" height="28" aria-hidden="true">
+      <path fill="currentColor" d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z" />
+    </svg>
+  </button>
+  <button class="modal-nav modal-next" id="modal-next" aria-label="next" data-i18n-aria="modalNext" disabled>
+    <svg viewBox="0 0 24 24" width="28" height="28" aria-hidden="true">
+      <path fill="currentColor" d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6z" />
+    </svg>
+  </button>
+  <img id="modal-image" alt="" />
+  <div class="modal-caption" id="modal-caption"></div>
+</div>
 
 
 <!-- 갤러리 전용 CSS/JS 로딩 -->
 <link rel="stylesheet" href="{{ site.baseurl }}/apps/gallery/gallery.css?v={{ site.time | date: '%s' }}">
-<script src="{{ site.baseurl }}/apps/gallery/gallery-i18n.js?v={{ site.time | date: '%s' }}" defer></script>
+
+<!-- i18n 서비스 -->
+<script type="module" src="{{ site.baseurl }}/i18n/service/i18n-service.js?v={{ site.time | date: '%s' }}"></script>
+<script defer src="{{ site.baseurl }}/i18n/service/i18n-adapter.js?v={{ site.time | date: '%s' }}"></script>
+
 <script src="{{ site.baseurl }}/apps/gallery/gallery-tags.js?v={{ site.time | date: '%s' }}" defer></script>
 
 <script>
-  document.addEventListener('DOMContentLoaded', () => {
+  document.addEventListener('DOMContentLoaded', async () => {
+    // Initialize i18n first
+    if (typeof initPageI18n === 'function') {
+      await initPageI18n('gallery');
+    }
+
+    // Then load navigation
     if (typeof Navigation !== 'undefined') {
       Navigation.load('gallery');
     }
   });
-  </script>
-
+</script>
