--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ jp: /?lang=jp
         align-items: center;
         justify-content: center;
         position: relative;
-        border:none;
+        border: none;
         /* 추가 */
     }
 
@@ -104,8 +104,11 @@ jp: /?lang=jp
     <div class="separator-line"></div>
     <div class="popular-content" data-max-count="10">
         <div class="posts-header">
-            <h2><a href="/character/" style="text-decoration: none; color: inherit;" id="popular-characters-title">인기 괴도</a></h2>
-            <a href="/character/" class="show-more-characters-btn" style="text-decoration: none; color: inherit;" id="show-more-characters-btn"><img src="{{ site.baseurl }}/assets/img/home/news_more2.png" alt="logo" style="
+            <h2><a href="/character/" style="text-decoration: none; color: inherit;" id="popular-characters-title">인기
+                    괴도</a></h2>
+            <a href="/character/" class="show-more-characters-btn" style="text-decoration: none; color: inherit;"
+                id="show-more-characters-btn"><img src="{{ site.baseurl }}/assets/img/home/news_more2.png" alt="logo"
+                    style="
                 max-height: 11px; opacity: 0.75;
             "></a>
         </div>
@@ -239,8 +242,6 @@ jp: /?lang=jp
 <script src="{{ site.baseurl }}/assets/js/home/quick-grid.js?v={{ site.time | date: '%s' }}"></script>
 <link rel="stylesheet" href="{{ site.baseurl }}/assets/js/home/carousel.css?v={{ site.time | date: '%s' }}">
 
-<!-- iframe -->
-<!-- <iframe id="music-player" src="{{ site.baseurl }}/music.html" style="display: none;"></iframe> -->
 
 <script>
 
@@ -965,4 +966,3 @@ jp: /?lang=jp
         }
     }
 </script>
-
