--- a/apps/wonder-weapon/index.html
+++ b/apps/wonder-weapon/index.html
@@ -29,30 +29,33 @@ jp: /wonder-weapon/?lang=jp
   </div>-->
 
   <div class="navigation-path">
-    <script>document.write(`<a href="../../?v=${APP_VERSION}" id="nav-home">홈</a>`);</script>
+    <script>document.write(`<a href="../../?v=${APP_VERSION}" id="nav-home" data-i18n="navHome">홈</a>`);</script>
     <span class="separator">/</span>
-    <span class="current-page" id="nav-current">원더 무기</span>
+    <span class="current-page" id="nav-current" data-i18n="navCurrent">원더 무기</span>
   </div>
 
   <div class="header-container">
-    <h1 id="page-title">원더 무기</h1>
+    <h1 id="page-title" data-i18n="pageTitle">원더 무기</h1>
   </div>
 
   <!-- Filter section -->
   <div class="filter-section">
     <div class="filter-header">
       <div class="source-filter">
-        <button class="source-filter-btn active" data-source="all" id="filter-all">전체</button>
-        <button class="source-filter-btn" data-source="Shop" id="filter-shop">교환</button>
-        <button class="source-filter-btn" data-source="story" id="filter-story">스토리</button>
+        <button class="source-filter-btn active" data-source="all" id="filter-all" data-i18n="filterAll">전체</button>
+        <button class="source-filter-btn" data-source="Shop" id="filter-shop" data-i18n="filterShop">교환</button>
+        <button class="source-filter-btn" data-source="story" id="filter-story" data-i18n="filterStory">스토리</button>
       </div>
       <div class="search-container">
         <div class="search-icon">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M15.5 14H14.71L14.43 13.73C15.41 12.59 16 11.11 16 9.5C16 5.91 13.09 3 9.5 3C5.91 3 3 5.91 3 9.5C3 13.09 5.91 16 9.5 16C11.11 16 12.59 15.41 13.73 14.43L14 14.71V15.5L19 20.49L20.49 19L15.5 14ZM9.5 14C7.01 14 5 11.99 5 9.5C5 7.01 7.01 5 9.5 5C11.99 5 14 7.01 14 9.5C14 11.99 11.99 14 9.5 14Z" fill="rgba(255, 255, 255, 0.6)" />
+            <path
+              d="M15.5 14H14.71L14.43 13.73C15.41 12.59 16 11.11 16 9.5C16 5.91 13.09 3 9.5 3C5.91 3 3 5.91 3 9.5C3 13.09 5.91 16 9.5 16C11.11 16 12.59 15.41 13.73 14.43L14 14.71V15.5L19 20.49L20.49 19L15.5 14ZM9.5 14C7.01 14 5 11.99 5 9.5C5 7.01 7.01 5 9.5 5C11.99 5 14 7.01 14 9.5C14 11.99 11.99 14 9.5 14Z"
+              fill="rgba(255, 255, 255, 0.6)" />
           </svg>
         </div>
-        <input type="text" id="weaponSearch" placeholder="무기 검색..." autocomplete="off">
+        <input type="text" id="weaponSearch" data-i18n-placeholder="searchPlaceholder" placeholder="무기 검색..."
+          autocomplete="off">
       </div>
     </div>
   </div>
@@ -90,6 +93,10 @@ jp: /wonder-weapon/?lang=jp
     }
   </style>
 </div>
+
+<!-- i18n 서비스 -->
+<script type="module" src="{{ site.baseurl }}/i18n/service/i18n-service.js?v={{ site.time | date: '%s' }}"></script>
+<script defer src="{{ site.baseurl }}/i18n/service/i18n-adapter.js?v={{ site.time | date: '%s' }}"></script>
 
 <script src="{{ site.baseurl }}/assets/js/collapsible-sections.js?v={{ site.time | date: '%s' }}"></script>
 <script src="{{ site.baseurl }}/apps/wonder-weapon/wonder-weapon.js?v={{ site.time | date: '%s' }}"></script>
