--- a/apps/schedule/index.html
+++ b/apps/schedule/index.html
@@ -235,7 +235,7 @@ kr: /schedule/?lang=kr
             }
 
             // Then load navigation
-            Navigation.load('schedule');
+            Navigation.load('schedule-release');
 
             // Notice text visibility based on language
             const noticeLang = (typeof getCurrentLang === 'function') ? getCurrentLang() : lang;
