--- a/apps/astrolabe/index.html
+++ b/apps/astrolabe/index.html
@@ -71,6 +71,9 @@ description: 페르소나5 더 팬텀 X 성좌의 시련 (Trial of the Astrolabe
         </div>
     </div>
 
+    <!-- Shooting Stars Layer -->
+    <div class="shooting-star-container" id="shooting-star-container"></div>
+
     <!-- Canvas Container - full screen -->
     <div class="canvas-container">
         <canvas id="astrolabe-canvas"></canvas>
