--- a/apps/about/index.html
+++ b/apps/about/index.html
@@ -150,13 +150,13 @@ jp: /about/?lang=jp
                             <li>rudytudysubs</li><!--15$ 26/01/18-->
                             <li>Trishelle</li> <!--12$ 26/01/20-->
                             <li>skippy</li> <!--12$ 26/01/21-->
+                            <li>Xylex(SEA)</li> <!--6$ 25/11--> <!--6$ 26/01/29-->
                             <li>kai</li> <!--9$ 25/08/22-->
                             <li>김*환</li> <!--9$ 25/07/18-->
                             <li>임*훈</li><!--10000 25/07/06-->
                             <li>김*현</li> <!--10000 25/05/18-->
                             <li>카미유</li> <!--10000 25/07/18-->
                             <li>서*일</li> <!--10000 25/09/19-->
-                            <li>Xylex(SEA)</li> <!--6$ 25/11-->
                             <li>ochette</li> <!--6$ 25/06/18-->
                             <li>Sages</li> <!--6$ 25/09/06-->
                             <li>Denys</li> <!--6$ 25/12/27-->
@@ -170,6 +170,7 @@ jp: /about/?lang=jp
                             <li>Main</li> <!--3$ 25/10/18-->
                             <li>Shira</li> <!--3$ 26/01/20-->
                             <li>Figaf Hguk</li> <!--3$ 26/01/21-->
+                            <li>Vexx</li> <!--3$ 26/01/29-->
                             <li>Ian</li><!--3000 25/06/20-->
                         </ul>
                     </div>
