--- a/index.html
+++ b/index.html
@@ -242,7 +242,6 @@ jp: /?lang=jp
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 90% !important;
         }
     }
 </style>
@@ -301,9 +300,9 @@ jp: /?lang=jp
         <span class="close-button" onclick="document.getElementById('supportModalKR').style.display='none'"
             style="color: #aaa; float: right; font-size: 28px; font-weight: bold; cursor: pointer;">&times;</span>
         <h3 style="margin-top: 0; margin-bottom: 20px; text-align: center;">서포트</h3>
-        <p style="text-align: center; margin-bottom: 20px; word-break: keep-all;">
-            루페르넷은 여러분의 후원으로 운영됩니다.<br>
-        </p>
+        <!-- <p style="text-align: center; margin-bottom: 20px; word-break: keep-all;">
+            루페르넷은 여러분의 후원으로만 운영됩니다.<br> 
+        </p>-->
         <div style="display: flex; flex-direction: column; gap: 15px;">
             <!-- KakaoPay Button -->
             <button
