--- a/apps/tactic-maker/index.html
+++ b/apps/tactic-maker/index.html
@@ -12,8 +12,10 @@ en: /tactic-maker/?lang=en
 jp: /tactic-maker/?lang=jp
 ---
 
+<!-- Force Rebuild -->
 <!-- Tactic Maker CSS -->
 <link rel="stylesheet" href="{{ site.baseurl }}/apps/tactic-maker/tactic-maker.css?v={{ site.time | date: '%s' }}">
+<link rel="stylesheet" href="{{ site.baseurl }}/apps/tactic-maker/tactic-board.css?v={{ site.time | date: '%s' }}">
 
 <link rel="stylesheet" href="{{ site.baseurl }}/apps/persona/persona-img.css?v={{ site.time | date: '%s' }}">
 
@@ -48,6 +50,14 @@ jp: /tactic-maker/?lang=jp
                     <path d="M5 21h14" />
                 </svg>
                 <span data-i18n="export">내보내기</span>
+            </button>
+            <button id="btnSettings" class="btn-refresh btn-storage" type="button" aria-label="설정">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path
+                        d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.09a2 2 0 0 1-1-1.74v-.47a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.39a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z" />
+                    <circle cx="12" cy="12" r="3" />
+                </svg>
             </button>
             <input id="fileInput" type="file" accept=".json" hidden>
         </div>
@@ -150,6 +160,64 @@ jp: /tactic-maker/?lang=jp
                 data-i18n-placeholder="search">
             <div class="persona-list-grid" id="personaList">
                 <!-- Personas injected here -->
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Role Selection Modal -->
+<div class="modal" id="roleModal" hidden>
+    <div class="modal-backdrop" data-close="roleModal"></div>
+    <div class="modal-dialog" style="max-width: 400px;">
+        <div class="modal-header">
+            <h2 data-i18n="selectRole">직업 선택</h2>
+            <button class="modal-close" data-close="roleModal">&times;</button>
+        </div>
+        <div class="modal-content">
+            <div class="role-list-grid" id="roleList">
+                <!-- Roles injected here -->
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Settings Modal -->
+<div class="modal" id="settingsModal" hidden>
+    <div class="modal-backdrop" data-close="settingsModal"></div>
+    <div class="modal-dialog" style="max-width: 400px;">
+        <div class="modal-header">
+            <h2 data-i18n="settings">설정</h2>
+            <button class="modal-close" data-close="settingsModal">&times;</button>
+        </div>
+        <div class="modal-content">
+            <div class="form-group" style="flex-direction: row; align-items: center; justify-content: space-between;">
+                <label data-i18n="defaultRitual">기본 의식</label>
+                <select id="settingDefaultRitual" class="input-select" style="width: auto; min-width: 100px;">
+                    <option value="0">0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                </select>
+            </div>
+            <div class="form-group" style="flex-direction: row; align-items: center; justify-content: space-between;">
+                <label data-i18n="defaultModification">기본 개조</label>
+                <select id="settingDefaultModification" class="input-select" style="width: auto; min-width: 100px;">
+                    <option value="-">-</option>
+                    <option value="0">0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                </select>
+            </div>
+            <div class="form-group" style="flex-direction: row; align-items: center; justify-content: space-between;">
+                <label data-i18n="autoWonderWeapon" for="settingAutoWonderWeapon">원더 무기 자동 설정 (반항/지배)</label>
+                <input type="checkbox" id="settingAutoWonderWeapon" style="width: 20px; height: 20px; cursor: pointer;">
             </div>
         </div>
     </div>
