--- a/apps/tactic-maker/index.html
+++ b/apps/tactic-maker/index.html
@@ -21,14 +21,23 @@ jp: /tactic-maker/?lang=jp
 
 <!-- Tactic Maker App -->
 <div class="main-wrapper tactic-maker-page">
+    <!-- Loading Overlay -->
+    <div class="tactic-loading-overlay" id="tacticLoadingOverlay">
+        <img src="{{ site.baseurl }}/apps/tactic-maker/p5xkr_walk_960.gif" alt="Loading" class="tactic-loading-gif">
+        <div class="tactic-loading-progress-container">
+            <div class="tactic-loading-progress-bar" id="tacticLoadingBar"></div>
+        </div>
+        <div class="tactic-loading-percent" id="tacticLoadingPercent">0%</div>
+    </div>
+
     <div class="navigation-path">
-        <script>document.write(`<a href="../../?v=${APP_VERSION}">홈</a>`);</script>
+        <script>document.write(`<a href="../../?v=${APP_VERSION}" data-i18n="home">홈</a>`);</script>
         <span class="separator">/</span>
-        <span class="current-page">택틱 메이커</span>
+        <span class="current-page" data-i18n="navPath">택틱 / 택틱 메이커</span>
     </div>
 
     <div class="header-container">
-        <h1>택틱 메이커</h1>
+        <h1 data-i18n="pageTitle">택틱 메이커</h1>
         <div class="sheet-status">
             <button id="btnEditMode" class="btn-refresh btn-storage btn-edit-toggle" type="button" aria-pressed="true">
                 <span data-i18n="editMode">편집 모드</span>
@@ -50,6 +59,25 @@ jp: /tactic-maker/?lang=jp
                     <path d="M5 21h14" />
                 </svg>
                 <span data-i18n="export">내보내기</span>
+            </button>
+            <button id="btnShare" class="btn-refresh btn-storage" type="button" aria-label="공유">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <circle cx="18" cy="5" r="3"></circle>
+                    <circle cx="6" cy="12" r="3"></circle>
+                    <circle cx="18" cy="19" r="3"></circle>
+                    <line x1="8.59" y1="13.51" x2="15.42" y2="17.49"></line>
+                    <line x1="15.41" y1="6.51" x2="8.59" y2="10.49"></line>
+                </svg>
+                <span data-i18n="share">공유</span>
+            </button>
+            <button id="btnCapture" class="btn-refresh btn-storage" type="button" aria-label="캡처">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z" />
+                    <circle cx="12" cy="13" r="4" />
+                </svg>
+                <span data-i18n="capture">캡처</span>
             </button>
             <button id="btnSettings" class="btn-refresh btn-storage" type="button" aria-label="설정">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
@@ -141,7 +169,9 @@ jp: /tactic-maker/?lang=jp
                     <!-- Dynamic rows -->
                 </tbody>
             </table>
-            <button id="btnAddTurn" class="btn-add-turn" type="button" data-i18n="addTurn">+ 턴 추가</button>
+            <button id="btnAddTurn" class="btn-add-turn">
+                <span data-i18n="addTurn">+ 턴 추가</span>
+            </button>
         </div>
     </section>
 
@@ -227,6 +257,9 @@ jp: /tactic-maker/?lang=jp
     </div>
 </div>
 
+<!-- html-to-image for capture -->
+<script src="https://cdn.jsdelivr.net/npm/html-to-image@1.11.11/dist/html-to-image.min.js"></script>
+
 <!-- Data Scripts (Persona) -->
 <script src="{{ site.baseurl }}/data/persona/order.js?v={{ site.time | date: '%s' }}"></script>
 <script src="{{ site.baseurl }}/data/persona/nonorder.js?v={{ site.time | date: '%s' }}"></script>
@@ -237,14 +270,17 @@ jp: /tactic-maker/?lang=jp
 <script type="module" src="{{ site.baseurl }}/i18n/service/i18n-service.js?v={{ site.time | date: '%s' }}"></script>
 <script type="module" src="{{ site.baseurl }}/apps/tactic-maker/js/main.js?v={{ site.time | date: '%s' }}"></script>
 <script>
-    // Initialize Navigation
-    if (typeof Navigation !== 'undefined') {
-        Navigation.load('tactic-maker');
+    // Initialize Navigation after DOM is ready (footer must exist)
+    function initNavigation() {
+        if (typeof Navigation !== 'undefined') {
+            Navigation.load('tactic-maker');
+        }
+    }
+
+    if (document.readyState === 'loading') {
+        document.addEventListener('DOMContentLoaded', initNavigation);
     } else {
-        window.addEventListener('load', () => {
-            if (typeof Navigation !== 'undefined') {
-                Navigation.load('tactic-maker');
-            }
-        });
+        // DOM already loaded
+        initNavigation();
     }
 </script>
